src/cmds/java/snapshots/rtk__cmds__java__mvn_cmd__tests__filter_mvn_multi_success.snap
---
source: src/cmds/java/mvn_cmd.rs
expression: output
---
mvn clean test-compile checkstyle:check (multi-goal)
[INFO] /app/src/test/java/com/example/security/saml/SamlAdGroupProcessorTest.java: uses unchecked or unsafe operations.
[INFO] /app/src/test/java/com/example/security/saml/SamlAdGroupProcessorTest.java: Recompile with -Xlint:unchecked for details.
You have 0 Checkstyle violations.
BUILD SUCCESS
Total time: 25.459 s
