src/cmds/java/snapshots/rtk__cmds__java__mvn_cmd__tests__filter_mvn_multi_verify_failure_stdout.snap
---
source: src/cmds/java/mvn_cmd.rs
expression: output
---
mvn clean verify (multi-goal)
mvn: ok
mvn verify: 68 run, 1 failed (?)

Failures:
1. com.example.app.UserProcessingIT.shouldProcessUser
   AssertionFailedError: expected: <201> but was: <500>
   at com.example.app.UserProcessingIT.shouldProcessUser(UserProcessingIT.java:88)
Reactor Summary for app-parent 1.0.0-SNAPSHOT:
core ............................................... SUCCESS [  6.123 s]
app ................................................ FAILURE [ 41.108 s]
BUILD FAILURE
Total time: 47.231 s
