src/cmds/java/snapshots/rtk__cmds__java__mvn_cmd__tests__snapshot_clean_auth.snap
---
source: src/cmds/java/mvn_cmd.rs
expression: output
---
mvn clean: deleted /home/user/git/auth/target (1.418 s)
