src/cmds/java/snapshots/rtk__cmds__java__mvn_cmd__tests__snapshot_compile_auth.snap
---
source: src/cmds/java/mvn_cmd.rs
expression: output
---
[INFO] annotations
[INFO] comments
[INFO] sources
[INFO]   interfaces (immutable) : false
[INFO]   table-valued functions : true
[INFO] other
[INFO] BUILD SUCCESS
[INFO] Total time:  36.332 s
