src/cmds/java/snapshots/rtk__cmds__java__mvn_cmd__tests__snapshot_dep_tree_beacon.snap
---
source: src/cmds/java/mvn_cmd.rs
expression: output
---
-----------------------< com.example:beacon >------------------------
--------------------------------[ jar ]---------------------------------
--- dependency:3.9.0:tree (default-cli) @ beacon ---
com.example:beacon:jar:1.0-SNAPSHOT
+- org.springframework.boot:spring-boot-starter-web:jar:4.0.3:compile (9 transitive)
+- org.springframework.boot:spring-boot-starter-webflux:jar:4.0.3:compile (29 transitive)
+- org.springframework.boot:spring-boot-starter-data-jpa:jar:4.0.3:compile (24 transitive)
+- org.springframework.boot:spring-boot-starter-data-redis:jar:4.0.3:compile (16 transitive)
+- org.springframework.boot:spring-boot-starter-validation:jar:4.0.3:compile (5 transitive)
+- org.springframework.boot:spring-boot-starter-actuator:jar:4.0.3:compile (7 transitive)
+- org.springframework.boot:spring-boot-starter-security:jar:4.0.3:compile (2 transitive)
+- com.example:toolkit:jar:1.3-38:compile (7 transitive)
+- com.example.friendly-id:friendly-id:jar:2.0.0-SNAPSHOT:compile (scope not updated to compile)
+- com.example.friendly-id:friendly-id-jackson2-datatype:jar:2.0.0-SNAPSHOT:compile
+- com.example.friendly-id:friendly-id-jackson-datatype:jar:2.0.0-SNAPSHOT:compile
+- org.springframework.boot:spring-boot-starter-amqp:jar:4.0.3:compile (1 transitive)
+- nl.big-o:liqp:jar:0.9.2.3:compile
+- com.ibm.icu:icu4j:jar:78.2:compile
+- com.mailjet:mailjet-client:jar:6.0.1:compile (4 transitive)
+- com.slack.api:slack-api-client:jar:1.47.0:compile
+- com.nimbusds:nimbus-jose-jwt:jar:9.37:compile (scope not updated to compile)
+- org.jsoup:jsoup:jar:1.22.1:compile
+- commons-validator:commons-validator:jar:1.10.1:compile
+- org.postgresql:postgresql:jar:42.7.10:runtime
+- org.liquibase:liquibase-core:jar:5.0.1:compile (1 transitive)
+- org.springframework.boot:spring-boot-starter-jooq:jar:4.0.3:compile
+- org.jooq.pro:jooq:jar:3.20.8:compile (1 transitive)
+- org.projectlombok:lombok:jar:1.18.42:compile
+- net.logstash.logback:logstash-logback-encoder:jar:8.0:compile
+- com.datadoghq:dd-trace-api:jar:1.60.1:compile
+- org.springframework.boot:spring-boot-starter-test:jar:4.0.3:test (14 transitive)
+- org.springframework.boot:spring-boot-starter-webmvc-test:jar:4.0.3:test
+- org.springframework.security:spring-security-test:jar:7.0.3:test (3 transitive)
+- org.springframework.boot:spring-boot-testcontainers:jar:4.0.3:test (8 transitive)
+- org.springframework.amqp:spring-rabbit-test:jar:4.0.2:test (7 transitive)
+- io.projectreactor:reactor-test:jar:3.8.3:test
+- org.awaitility:awaitility:jar:4.3.0:test (scope not updated to test)
+- org.testcontainers:testcontainers-junit-jupiter:jar:2.0.3:test
+- org.testcontainers:testcontainers-postgresql:jar:2.0.3:test (1 transitive)
\- org.testcontainers:testcontainers-rabbitmq:jar:2.0.3:test
