src/cmds/java/snapshots/rtk__cmds__java__mvn_cmd__tests__snapshot_enriched_surefire_and_failsafe.snap
---
source: src/cmds/java/mvn_cmd.rs
expression: out
---
mvn verify: 12 run, 4 failed (05:42 min)
BUILD FAILURE

Failures (from surefire-reports/):
1. com.example.FailingTest.shouldReturnUser
   AssertionFailedError: expected:<200> but was:<404>
     org.opentest4j.AssertionFailedError: expected:<200> but was:<404>
     	... 1 framework frames omitted
     	at com.example.FailingTest.shouldReturnUser(FailingTest.java:42)
     	... 1 framework frames omitted

2. com.example.FailingTest.shouldHandleNull
   AssertionError: Unexpected exception: NullPointerException
     java.lang.AssertionError: Unexpected exception: NullPointerException
     	at com.example.FailingTest.shouldHandleNull(FailingTest.java:55)
     	... 1 framework frames omitted



Integration failures (from failsafe-reports/):
1. com.example.PortConflictIT.shouldStartServer
   [error] BindException: Address already in use
     java.net.BindException: Address already in use
     	... 2 framework frames omitted
     	at com.example.PortConflictIT.shouldStartServer(PortConflictIT.java:42)

2. com.example.DbIntegrationIT.shouldConnect
   [error] IllegalStateException: Failed to load ApplicationContext
     java.lang.IllegalStateException: Failed to load ApplicationContext
     	... 3 framework frames omitted
     Caused by: org.springframework.beans.factory.BeanCreationException: Error creating bean with name 'dataSource'
     	... 3 framework frames omitted
     Caused by: org.hibernate.HibernateException: Unable to acquire JDBC Connection; nested exception is java.sql.SQLTransientConnectionException: HikariPool-1 - Connection is not available, request timed ...
     	... 1 framework frames omitted
     	at com.example.DbIntegrationIT.shouldConnect(DbIntegrationIT.java:88)
     	... 1 framework frames omitted
  captured output:
    [STDERR]
    2026-04-15 10:42:17 ERROR HikariDataSource - HikariPool-1 - Connection is not available
    Connection refused (Connection refused)



(reports: 1 surefire, 2 failsafe)
