src/cmds/java/snapshots/rtk__cmds__java__mvn_cmd__tests__snapshot_enriched_surefire_only.snap
---
source: src/cmds/java/mvn_cmd.rs
expression: out
---
mvn test: 7 run, 2 failed (00:10 min)
BUILD FAILURE

Failures (from surefire-reports/):
1. com.example.FailingTest.shouldReturnUser
   AssertionFailedError: expected:<200> but was:<404>
     org.opentest4j.AssertionFailedError: expected:<200> but was:<404>
     	... 1 framework frames omitted
     	at com.example.FailingTest.shouldReturnUser(FailingTest.java:42)
     	... 1 framework frames omitted

2. com.example.FailingTest.shouldHandleNull
   AssertionError: Unexpected exception: NullPointerException
     java.lang.AssertionError: Unexpected exception: NullPointerException
     	at com.example.FailingTest.shouldHandleNull(FailingTest.java:55)
     	... 1 framework frames omitted



(reports: 2 surefire)
