src/cmds/java/snapshots/rtk__cmds__java__mvn_cmd__tests__snapshot_red_flag_no_tests.snap
---
source: src/cmds/java/mvn_cmd.rs
expression: out
---
mvn test: 0 tests executed — surefire detected no tests. Check pom.xml (surefire plugin configuration) or run: rtk proxy mvn test
