src/cmds/java/snapshots/rtk__cmds__java__mvn_cmd__tests__snapshot_verify_auth.snap
---
source: src/cmds/java/mvn_cmd.rs
expression: output
---
mvn verify: 941 passed, 9 skipped (02:11 min)
